--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acceso denegado</title>
+    <title>Google Sing-in</title>
 </head>
 <body>
-    <h1>Acceso denegado</h1>
+    <h1>Google Sing-in</h1>
     <hr>
-    <h5><span>Stiven</span></h5>
+
+    <div id="g_id_onload"
+        data-client_id="117375795917-jeegc361kaoh05fuovo4o6vc0ctf7jbd.apps.googleusercontent.com"
+        data-auto_prompt="false"
+        data-callback="handleCredentialResponse">
+        
+    </div>
+
+    <div class="g_id_signin"
+        data-type="standard"
+        data-size="large"
+        data-theme="outline"
+        data-text="sign_in_with"
+        data-shape="rectangular"
+        data-logo_alignment="left">
+    </div>
+
+    <!-- <script src="https://accounts.google.com/gsi/client" async defer></script>
+
+    <script>
+        function handleCredentialResponse(response) {
+            // google token = Id_token
+           console.log('id_token', response.credential);
+        }
+    </script> -->
+      
 </body>
 </html>
